# malloc-hooks

./: .gitignore  Makefile.am  configure.ac
include/mi_hooks/: malloc_hook.h  malloc_hook_c.h
src/: libc_override.h  libc_override_osx.h  main.c  malloc_guard.cc  malloc_guard.h  malloc_hook-inl.h  malloc_hook.cc
t/: basic_hook_test.cc
